meta data image changed

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     />
     <meta
       property="og:url"
-      content="https://sociact.com"
+      content="https://sociact.ai"
     />
     <meta
       property="og:title"
@@ -42,7 +42,7 @@
     />
     <meta
       property="og:image"
-      content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
+      content="https://ibb.co/FL1sD89D"
     />
 
     <!-- Twitter -->
@@ -53,7 +53,7 @@
 
     <meta
       name="twitter:url"
-      content="https://sociact.com"
+      content="https://sociact.ai"
     />
     <meta
       name="twitter:title"
@@ -65,7 +65,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://res.cloudinary.com/dbzv9xfjp/image/upload/v1705560686/og-images/shadc-react_gketpd.jpg"
+      content="https://ibb.co/FL1sD89D"
     />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
