meta data updated with cloudinary link

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     />
     <meta
       property="og:image"
-      content="https://ibb.co/FL1sD89D"
+      content="https://res.cloudinary.com/dvuohzc5b/image/upload/v1738650417/cqfqpkuvabm38bepwu6p.png"
     />
 
     <!-- Twitter -->
@@ -65,7 +65,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://ibb.co/FL1sD89D"
+      content="https://res.cloudinary.com/dvuohzc5b/image/upload/v1738650417/cqfqpkuvabm38bepwu6p.png"
     />
     <script src="https://accounts.google.com/gsi/client" async defer></script>
   </head>
