changed name to social automation

--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
     />
 
     <!-- Primary Meta Tags -->
-    <title>Sociact</title>
+    <title>Social Automation</title>
     <meta
       name="title"
-      content="Sociact"
+      content="Social Automation"
     />
     <meta
       name="description"
-      content="Sociact is a platform for social media content creation and management."
+      content="Social Automation is a platform for social media content creation and management."
     />
     <!-- Open Graph / Facebook -->
     <meta
@@ -30,15 +30,15 @@
     />
     <meta
       property="og:url"
-      content="https://sociact.ai"
+      content="https://Social Automation.ai"
     />
     <meta
       property="og:title"
-      content="Sociact"
+      content="Social Automation"
     />
     <meta
       property="og:description"
-      content="Sociact is a platform for social media content creation and management."
+      content="Social Automation is a platform for social media content creation and management."
     />
     <meta
       property="og:image"
@@ -53,15 +53,15 @@
 
     <meta
       name="twitter:url"
-      content="https://sociact.ai"
+      content="https://Social Automation.ai"
     />
     <meta
       name="twitter:title"
-      content="Sociact"
+      content="Social Automation"
     />
     <meta
       name="twitter:description"
-      content="Sociact is a platform for social media content creation and management."
+      content="Social Automation is a platform for social media content creation and management."
     />
     <meta
       name="twitter:image"
